--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,14 @@
 
 buildscript {
     repositories {
-        jcenter()
+        repositories {
+            jcenter()
+            mavenCentral()
+            google()
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:3.1.0-alpha05'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,6 +23,11 @@ allprojects {
     }
     repositories {
         jcenter()
+        maven {
+            url 'https://jitpack.io'
+        }
+
+        maven { url 'https://maven.google.com' }
     }
 }
 
