--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,11 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url 'https://jitpack.io'
+        }
+
+        maven { url 'https://maven.google.com' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
