--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,11 +29,12 @@
         android:theme="@style/AppTheme">
 
         <!--The manifest entry for our MainActivity. Each Activity requires a manifest entry-->
-        <!-- TODO (5) Use AppTheme.Forecast as the MainActivity's new theme -->
+        <!-- COMPLETED (5) Use AppTheme.Forecast as the MainActivity's new theme -->
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            android:theme="@style/AppTheme.Forecast">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -62,7 +63,7 @@
         <!--This is required for immediate syncs -->
         <service
             android:name=".sync.SunshineSyncIntentService"
-            android:exported="false" />
+            android:exported="false"/>
 
         <!-- This is the Service declaration used in conjunction with FirebaseJobDispatcher -->
         <service
